@@ -191,6 +191,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22902: The "ip" command is now used on Linux to determine MAC address
+  in uuid.getnode().  Pach by Bruno Cauet.
+
 - Issue #22960: Add a context argument to xmlrpclib.ServerProxy constructor.
 
 - Issue #22389: Add contextlib.redirect_stderr().
